languagechooser (1.03) UNRELEASED; urgency=low

  * Safir Secerovic
   - Add Bosnian entries.
  * Alastair McKinstry
   - Typo in Irish entry.

 -- Alastair McKinstry <mckinstry@debian.org>  Sun,  2 Nov 2003 15:00:04 +0000

languagechooser (1.02) unstable; urgency=low

  * Joey Hess
    - Polished the wording of the question.

 -- Joey Hess <joeyh@debian.org>  Sat,  1 Nov 2003 11:18:27 -0500

languagechooser (1.01) unstable; urgency=low

  * Marcin Owsiany
    - Updated Polish text.
  * Petter Reinholdtsen
    - Get 'make demo' working again by removing template comments
      before handing it to debconf.
    - Comment out language choices Chinese (Simplified),
      Chinese (Traditional), Croatian, Hebrew and Icelandic,
      as the translated options are not up to date.
    - Correct spelling of Icelandic.
    - Add code to make it easy to test using locale name prefix in
      the language list.
    - Add check to make sure languagelist.l10n is valid UTF-8.
    - Start on entry for Spanish in Mexico.  Currently commented out until
      someone check the translation.
  * Murat Demirten
    - Updated Turkish text.
  * Denis Barbier
    - Recoded Turkish text from ISO-8859-9 to UTF-8.
  * Jordi Mallach
    - Update Catalan text.

 -- Petter Reinholdtsen <pere@debian.org>  Fri, 31 Oct 2003 01:18:07 +0100

languagechooser (1.0) unstable; urgency=low

  * Denis Barbier
    - Let mktemplates remove comments from templates-in
  * Bart Cornelis
    - removed period at end of translated string (thanks to Bas Zoetekouw)
  * Joey Hess
    - Put the comments back in templates-in
  * Matt Kraai
    - Do not set the title.
  * Petter Reinholdtsen
    - Update language option for Esperanto, text
      from Edmund Grimley Evans.
    - Set version to 1.0.  I believe languagechooser have all the
      features it need, and only need more language choices.

 -- Petter Reinholdtsen <pere@debian.org>  Sat, 18 Oct 2003 23:54:11 +0200

languagechooser (0.37) unstable; urgency=low
